fix(product): clean code in product and fix the problem N+1 queries